# privacy-label-observatory

./: .env.example  .gitignore  README.md  docker-compose.yml  insertDates.py  package-lock.json  package.json
.github/workflows/: codacy.yml  codeql.yml  observatory-quality.yml
Backend/: docker-compose.yml  index.js  rest.http
Backend/routes/: appList.js  getApp.js  search.js  testAPI.js
Frontend/: package.json
Misc/: dates_and_runs.json  renameIndexes.py
TransferScripts/: SqlToElastic.py  apple_elastic.py  elasticTransfer.py  final_transfer_script.py  insertDates.py  sqlToElasticFull.py
app/: AppNavBar.tsx  ExploreSidebar.tsx  SiteIcon.tsx  ThemeSwitcher.tsx  root.tsx  tailwind.css
backend/: .gitignore  Dockerfile  README.md  ai_overview_cache.json  client.js  dates_and_runs.json  docker-compose.yml  index.js  package-lock.json  package.json  recently_changed_cache.json  rest.http  test_es.js
final_copy/: apple_elastic.py  separate.py
frontend/: .gitignore  Dockerfile  package-lock.json  package.json  remix.config.js  tailwind.config.ts  tsconfig.json  vitest.config.ts
sample_data/: .gitignore  README.md  export.py  import.py  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt
sample_data/initialize/: dateIndex.js  dates_and_runs.json  graph3.js  initializeGenre.js  initializeIndex.js  initializeMatrix.js  initializePrice.js  initializePurpose.js  initializeRating.js  initializeRatioDC.js  initializeRatioDT.js  initializeSize.js  initializeVersion.js  initializeYear.js  update.sh  updateDateIndex.js  vennIndex.js
(+172 files in other folders)
